my personal website with hyperlinks and tags

--- a/video_codes/personal_website.html
+++ b/video_codes/personal_website.html
@@ -27,10 +27,11 @@
  </ul>
  <h3>My Hobbies</h3>
  <ol>
-    <li>Listening to music and myself</li>
+    <li>Listening to music and myself. Check out my <strong><a href="https://open.spotify.com/user/qn9kvcp9bbims48bk80504f4t?si=c887b1790b864d04">spotify</a></strong></li>
     <li>Imagining out of the box things like having accomplished everything and now you just relax</li>
     <li>Sleeping</li>
     <li>Used to talk to myself too but in past; now  NO!</li>
  </ol>
+ <a href="contact.html">Contact information</a>
 </body>
 </html>
