contact info page

--- a/video_codes/contact.html
+++ b/video_codes/contact.html
@@ -11,4 +11,14 @@
     <p>Phone Number: +91-7889-304-850 (IN) </p>
     <p>linkedIn: <a href="https://www.linkedin.com/in/sanna-showkat?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BHZ4yNTsdT6S3steG9eBl1A%3D%3D">Sanna Showkat</a></p>
 </body>
+<hr>
+ <form action="mailto:sannashowkat@gmail.com" method="post" enctype="text/plain">
+   <label>Your Name:</label>
+   <input type="text" name="yourName" value=""><br>
+   <label>Your Email:</label>
+   <input type="email"name="yourEmail" value=""><br>
+   <label>Your Message</label><br>
+   <textarea name="yourMessage" rows="10" cols="30"></textarea><br>
+   <input type="submit" name="">
+ </form>
 </html>
